; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/error/extr_elog.c_unpack_sql_state.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/error/extr_elog.c_unpack_sql_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unpack_sql_state.buf = internal global [12 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @unpack_sql_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 5
  br i1 %6, label %7, label %18

7:                                                ; preds = %4
  %8 = load i32, i32* %2, align 4
  %9 = call signext i8 @PGUNSIXBIT(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [12 x i8], [12 x i8]* @unpack_sql_state.buf, i64 0, i64 %11
  store i8 %9, i8* %12, align 1
  %13 = load i32, i32* %2, align 4
  %14 = ashr i32 %13, 6
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %7
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %4

18:                                               ; preds = %4
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds [12 x i8], [12 x i8]* @unpack_sql_state.buf, i64 0, i64 %20
  store i8 0, i8* %21, align 1
  ret i8* getelementptr inbounds ([12 x i8], [12 x i8]* @unpack_sql_state.buf, i64 0, i64 0)
}

declare dso_local signext i8 @PGUNSIXBIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
